--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ azuredeploy.parameters.serviceplan.local.json
 .vs/
 /LetsEncrypt.ResourceGroup/Templates/azuredeploy.acm.parameters.local.json
 *.pubxml
+LetsEncrypt.Azure.Runner/settings.json
